<resources>
    <string name="app_name">YourWeather</string>
    <string name="student_name">Raphael Valente</string>
    <string name="student_id">Z23464822</string>
    <string name="search">Search</string>
    <string name="current_loc">Current Location</string>
    <string name="search_input">Search City, State, or Zip</string>
    <string name="next_page">View Results</string>
    <string name="goback">Search Again</string>
    <string name="mapBtn">View Map</string>
    <string name="backResults">Back To Results</string>
</resources>